Turn off 'illegal access' warning with newer Java versions